--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "1.0.0",
   "description": "Electron View Pass Webpage Like Laravel",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/rezaghz/electron-view.git"
@@ -19,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/rezaghz/electron-view/issues"
   },
-  "homepage": "https://github.com/rezaghz/electron-view#readme"
+  "homepage": "https://github.com/rezaghz/electron-view#readme",
+  "dependencies": {
+    "app-root-path": "^2.1.0",
+    "fs": "^0.0.1-security"
+  }
 }
